fix table of contents to not overlap

--- a/app/assets/stylesheets/guide.css.scss
+++ b/app/assets/stylesheets/guide.css.scss
@@ -37,10 +37,10 @@ aside, .span4 {
 	background: $blue;
 	color: $white;
 	float: left;
-	height: 800px;
+	// height: 800px;
 	margin-left: 0px;
 	padding-top: 20px;
-	position: fixed;
+	// position: fixed;
 
 	h4 {
 		font-style: italic;
